# HeartCompass

./: .gitignore  CODE_REVIEW.md  HeartCompass_Economical_Evaluation_Report_English.docx  Immortality Code Review.txt  Immortality.card  README.md  debug_checkpoint_dump.json  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
.trae/deepwiki/: CLI 工具参考.md  meta.json  人格构建与提示词工程.md  代理图设计与工作流.md  开发与贡献指南.md  快速开始.md  数据模型与存储.md  核心概念与架构.md  部署与运维.md  项目概览.md  (+1 more)
docs/: ARCHITECTURE.md  BOTTLENECK.md  BRIEF_INTRO.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DESIGN_NOTES.md  DEVELOPMENT.md  HARNESS.md  HEARTCOMPASS.md  REFACTOR.md  TEAM_CONTRIBUTIONS.md  TODOs.md  UPDATES.md  USER_GUIDE.md  WBS_TRACKING.md  WP3.6_phase2_scope.md  WP5.4_test_plan.md  biweekly_report_4_draft.md  biweekly_report_4_final.md  biweekly_report_5_draft.md
mbti/: knowledge.json  quiz.json  result.json
prompts/: CONVERSATION_SYSTEM_PROMPT.md  FR_BUILDING_COMPARE_FIELD.md  FR_BUILDING_EXTRACT_FR_INTRINSIC_CANDIDATES.md  FR_BUILDING_PREPROCESS.md  FR_BUILDING_REPORT.md  SUMMARY_MESSAGES_FOR_TRIM.md
scripts/: build-dependencies.sh  build_git_history.py  build_git_history_may15_24.py  build_git_history_may25_31.py  db-migrate.sh  generate_exp3_report.py  generate_final_test_doc.py  generate_milestone1_meeting_summary.py  generate_milestone3_report.py  generate_milestone4_report.py  generate_project_charter.py  git_history_plan.py  publish.sh  run-dev.sh  run-langsmith.sh  uv2requirements.sh
src/: main.py  service_dispatcher.py
tests/: test_integration.py
(+107 files in other folders)
